# weather-app

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: coverage.yml  format.yml  lint.yml  test.yml  typecheck.yml
docs/: calendar-integration.md  getting-started.md  security.md  ux-comparison.md  ux-legacy-google-scripts.md  ux-new-application.md
legacy-google-scripts/: api_weather_general.gs  api_weatherservice.gs  calendar.gs  clothing.gs  emoji.gs  spreadsheet-coordinates.gs  sun.gs  sunrise-sunset-api.gs  utility.gs  weather.gs
src/weather_events/: __init__.py  cli.py  config.py
src/weather_events/api/: __init__.py  app.py
src/weather_events/api/routes/: auth.py  calendars.py  settings.py  users.py
src/weather_events/astronomy/: __init__.py  calculator.py
src/weather_events/auth/: __init__.py  dependencies.py  google.py  session.py
src/weather_events/calendar/: __init__.py  google_calendar.py  sync.py
src/weather_events/database/: __init__.py  connection.py  encryption.py  models.py
src/weather_events/models/: __init__.py  activity.py  event.py  location.py  recommendation.py  weather.py
src/weather_events/providers/: __init__.py  base.py  metno.py  pirateweather.py
src/weather_events/recommendations/: __init__.py  gear.py  go_no_go.py  time_slots.py
src/weather_events/rules/: __init__.py  conditions.py  engine.py
standards/: authentication.md  index.md  persistent-storage.md  services.md  user-interfaces.md
tests/: __init__.py  conftest.py  test_astronomy.py  test_models_location.py  test_models_weather.py  test_recommendations.py  test_rules.py
